# guitar-mastery-ai

./: .env.example  .gitignore  Dockerfile  GUIDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/rules/: agents.mdc  database.mdc  project-wide.mdc  testing.mdc
config/: agents.yaml  logging.yaml  settings.py
data/seed/: chords.json  guitar_history.json  jazz_standards.json  practice_routines.json  quizzes.json  scales.json  techniques.json
data/training/: dev_pm_playbook.md  jazz_teacher_knowledge.md  luthier_knowledge.md  sql_patterns.md
docs/: ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  DEBUGGING.md  DECISIONS.md
src/: __init__.py  main.py
src/agents/: __init__.py  base.py  dev_pm.py  jazz_teacher.py  luthier.py  sql_expert.py
src/api/: __init__.py  schemas.py
src/api/routes/: admin.py  chat.py
src/db/: __init__.py  connection.py  models.py  queries.py  seed.py
src/frontend/static/css/: style.css
src/frontend/static/js/: app.js
src/frontend/templates/: index.html
src/orchestrator/: __init__.py  context.py  coordinator.py  router.py
src/utils/: __init__.py  benchmarks.py  logger.py
tests/: conftest.py
tests/test_agents/: test_router.py
